--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     </div>
 
     <div class="photo-container">
-      <img src="profile.jpg" alt="Portrait of Kene David Nwosu">
+      <img src="https://github.com/kendavidn/my_graph_portfolio_2/blob/main/linkedin%20photo%20-%20Kene%20David%20Nwosu%20(1).png?raw=true" alt="Portrait of Kene David Nwosu">
     </div>
 
     <div class="intro-right">
