--- a/index.html
+++ b/index.html
@@ -3,296 +3,213 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kene David Nwosu | Generative AI for Work & Research Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+  <title>Kene David Nwosu – GenAI Portfolio</title>
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <style>
     :root {
-      --dark-teal: #014d4e;
-      --light-teal: #b7e5e4;
-      --peach: #fff7e6;
-      --white: #ffffff;
-
-      --bg: var(--peach);
-      --text: var(--dark-teal);
+      --bg: #fbf8f5;
+      --text: #1e1e1e;
+      --accent: #a3d18c; /* pastel green similar to screenshot */
+      --shadow: rgba(0,0,0,.05);
     }
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    *,*:before,*:after { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
       font-family: 'Inter', sans-serif;
-      line-height: 1.6;
       background: var(--bg);
       color: var(--text);
-      scroll-behavior: smooth;
+      line-height: 1.6;
+      overflow-x: hidden; /* prevent horizontal scroll from decorative shapes */
     }
 
-    a {
-      color: var(--dark-teal);
+    /* ---------- NAV ---------- */
+    .nav {
+      position: fixed;
+      top: 0; left: 0; right: 0;
+      padding: 1.25rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      z-index: 10;
+      background: var(--bg);
+    }
+    .brand {
+      display: flex; align-items: center; gap: .5rem;
+      font-weight: 800; font-size: 1rem;
+    }
+    .brand .blob {
+      width: 28px; height: 28px;
+      background: var(--accent);
+      border-radius: 50% 40% 60% 50% / 50% 60% 40% 50%; /* irregular circle */
+    }
+    .nav a {
       text-decoration: none;
       font-weight: 600;
+      color: var(--text);
+      border-bottom: 2px solid transparent;
     }
+    .nav a:hover { border-bottom-color: var(--text); }
 
-    /* ───────────── Top Navigation ───────────── */
-    header {
-      padding: 1.5rem 1rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    .brand {
-      font-size: 1.25rem;
-      font-weight: 700;
-    }
-
-    nav {
-      display: flex;
-      gap: 1rem;
-      flex-wrap: wrap;
-    }
-
-    nav a {
-      position: relative;
-    }
-
-    nav a::after {
-      content: '';
-      position: absolute;
-      left: 0;
-      bottom: -2px;
-      width: 0;
-      height: 2px;
-      background: var(--dark-teal);
-      transition: width 0.2s ease;
-    }
-
-    nav a:hover::after {
-      width: 100%;
-    }
-
-    /* ───────────── Hero Section ───────────── */
+    /* ---------- HERO ---------- */
     .hero {
-      position: relative;
+      min-height: 100vh;
       display: grid;
-      grid-template-columns: 1fr auto 1fr;
+      grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
       align-items: center;
-      gap: 2.5rem;
-      padding: 4rem 1rem;
-      max-width: 1200px;
-      margin: auto;
+      gap: 3rem;
+      padding: 7rem 2rem 4rem; /* extra top padding to account for fixed nav */
     }
-
-    /* dotted line */
-    .hero::after {
-      content: '';
-      position: absolute;
-      left: 0;
-      right: 0;
-      top: 50%;
-      border-top: 2px dashed var(--dark-teal);
-      z-index: 0;
+    .intro {
+      display: flex; flex-direction: column;
+      gap: 1.25rem;
     }
-
-    .intro-left,
-    .intro-right {
-      z-index: 1;
-    }
-
-    .intro-left p {
-      max-width: 260px;
-      font-size: 1.1rem;
-    }
-
-    .intro-right h1 {
-      font-size: clamp(2rem, 5vw, 3.5rem);
-      line-height: 1.1;
-      font-weight: 700;
-    }
-
-    .intro-right small {
-      display: block;
-      margin-top: 0.25rem;
-      font-style: italic;
-      font-size: 0.9rem;
-    }
-
-    /* portrait */
-    .photo-container {
-      position: relative;
-      width: 280px;
-      height: 320px;
-      z-index: 1;
-    }
-
-    .photo-container img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      border-radius: 50% 45% 50% 50% / 60% 40% 60% 55%;
-      position: relative;
-      z-index: 1;
-    }
-
-    .photo-container::before {
-      content: '';
-      position: absolute;
-      top: 18px;
-      left: -22px;
-      width: 100%;
-      height: 100%;
-      background: var(--light-teal);
-      border-radius: 50% 45% 50% 50% / 60% 40% 60% 55%;
-      z-index: 0;
-      transform: rotate(-8deg);
-    }
-
-    /* ───────────── Sections ───────────── */
-    section {
-      padding: 4rem 1rem;
-      max-width: 900px;
-      margin: auto;
-    }
-
-    section h2 {
-      font-size: 1.75rem;
-      margin-bottom: 1rem;
-      color: var(--dark-teal);
-    }
-
-    /* About Me list */
-    .about-me ul {
-      list-style: disc inside;
-      margin-top: 0.75rem;
-    }
-
-    /* Course Details */
-    .details {
-      display: grid;
-      gap: 0.5rem;
-      margin-top: 1.25rem;
+    .intro p {
       font-size: 1rem;
+      max-width: 380px;
+    }
+    .socials {
+      display: flex; gap: 1rem; font-size: 1.25rem;
+    }
+    .socials a { color: var(--text); text-decoration: none; }
+
+    /* ---------- PROFILE IMAGE WITH ORGANIC SHAPE ---------- */
+    .portrait-wrapper {
+      position: relative;
+      width: 280px; height: 280px;
+      margin: 0 auto;
+      filter: drop-shadow(0 8px 12px var(--shadow));
+    }
+    .portrait-wrapper:before {
+      content: "";
+      position: absolute;
+      inset: -25px -40px -30px -45px; /* create oversize shape */
+      background: #1e1e1e;
+      border-radius: 50% 40% 50% 60% / 60% 50% 40% 50%;
+      z-index: 0;
+      transform: rotate(-15deg);
+    }
+    .portrait {
+      position: relative;
+      width: 100%; height: 100%;
+      border-radius: 50%;
+      object-fit: cover;
+      z-index: 1;
+      border: 4px solid var(--bg);
     }
 
-    .details span {
-      font-weight: 600;
+    /* ---------- NAME ---------- */
+    .name {
+      font-size: clamp(2rem,6vw,3.5rem);
+      font-weight: 800;
+      line-height: 1.1;
     }
+    .name small { display: block; font-weight: 300; font-size: .75rem; margin-top: .25rem; }
 
-    /* Submissions */
-    .submissions ul {
-      list-style: none;
-      margin-top: 1rem;
+    /* ---------- SECTIONS ---------- */
+    section { padding: 4rem 2rem; max-width: 1000px; margin: 0 auto; }
+    section h2 { font-size: 1.75rem; margin-bottom: 1.5rem; font-weight: 800; color: var(--text); }
+
+    /* course modules grid */
+    .modules {
+      margin-top: 2rem;
+      display: grid; grid-template-columns: repeat(auto-fit,minmax(260px,1fr)); gap: 1.25rem;
     }
-
-    .submissions li {
-      background: var(--white);
-      border: 2px dashed var(--light-teal);
-      border-radius: 0.75rem;
-      padding: 0.75rem 1rem;
-      margin-bottom: 0.75rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+    .module {
+      background: #ffffffee;
+      padding: 1rem 1.25rem;
+      border-radius: 8px;
+      border-left: 4px solid var(--accent);
+      box-shadow: 0 4px 8px var(--shadow);
     }
+    .module h3 { font-size: 1rem; font-weight: 600; margin-bottom: .5rem; }
+    .module p { font-size: .875rem; }
 
-    /* Footer */
+    /* submissions list */
+    .submissions ul { list-style:none; }
+    .submissions li { padding:.5rem 0; border-bottom:1px dashed #ddd; }
+    .submissions span { color:#888; }
+
+    /* FOOTER */
     footer {
-      background: var(--dark-teal);
-      color: var(--white);
-      text-align: center;
-      padding: 1rem;
-      font-size: 0.875rem;
+      text-align: center; padding: 2rem 1rem; font-size: .875rem;
     }
 
-    @media (max-width: 850px) {
-      .hero {
-        grid-template-columns: 1fr;
-        text-align: center;
-      }
-
-      .hero::after { display: none; }
-
-      .photo-container { margin: 0 auto; }
+    /* ------ RESPONSIVE TWEAKS ------ */
+    @media(max-width:768px){
+      .nav{padding:1rem;}
+      .portrait-wrapper{width:220px;height:220px;}
     }
   </style>
 </head>
 <body>
-  <!-- ───────────── Header & Navigation ───────────── -->
-  <header>
-    <div class="brand">Kene&nbsp;Nwosu</div>
+  <!-- Navigation -->
+  <header class="nav">
+    <div class="brand"><span class="blob"></span> KENE NWOSU</div>
     <nav>
-      <a href="#about">About</a>
-      <a href="#course">Course</a>
+      <a href="#about-course">Course</a>
       <a href="#submissions">Submissions</a>
     </nav>
   </header>
 
-  <!-- ───────────── Hero Section ───────────── -->
-  <section class="hero" id="about">
-    <div class="intro-left">
-      <p>I'm a PhD candidate, R developer, and data scientist exploring how generative&nbsp;AI can accelerate public‑health research.</p>
+  <!-- Hero Section (About Me) -->
+  <section class="hero" id="about-me">
+    <div class="intro">
+      <div class="name">Kene David Nwosu <small>PhD Candidate · Data Analyst · Educator</small></div>
+      <p>I’m a researcher and developer who helps health & life‑science teams leverage data and AI. I co‑founded <em>The GRAPH Courses</em> and build R/Shiny tools for organisations such as WHO.</p>
+      <div class="socials">
+        <a href="https://github.com/kendavidn" aria-label="GitHub">&#9728;</a>
+        <a href="https://www.linkedin.com/in/kendavidn" aria-label="LinkedIn">&#9670;</a>
+        <!-- placeholder unicode icons; replace with SVG if desired -->
+      </div>
     </div>
-
-    <div class="photo-container">
-      <img src="https://github.com/kendavidn/my_graph_portfolio_2/blob/main/linkedin%20photo%20-%20Kene%20David%20Nwosu%20(1).png?raw=true" alt="Portrait of Kene David Nwosu">
-    </div>
-
-    <div class="intro-right">
-      <h1>Kene<br>David&nbsp;Nwosu</h1>
-      <small>(you can call me Kene)</small>
+    <div class="portrait-wrapper">
+      <img src="https://github.com/kendavidn/my_graph_portfolio_6/blob/main/CleanShot%202025-05-07%20at%2014.09.30.jpg?raw=true" alt="Portrait of Kene David Nwosu" class="portrait">
     </div>
   </section>
 
-  <!-- ───────────── About the Course ───────────── -->
-  <section id="course">
-    <h2>Generative&nbsp;AI for Work&nbsp;&amp;&nbsp;Research Productivity</h2>
-    <p>This 8‑week live‑online certification shows researchers and knowledge workers how to automate analysis, content creation, and routine tasks—<em>without writing code</em>.</p>
-
-    <div class="details">
-      <div><span>Format:</span> Live online certification</div>
-      <div><span>Duration:</span> 8 weeks (starting May 9, 2025)</div>
-      <div><span>Workshops:</span> Fridays 3 pm GMT&nbsp;or Sundays 5 pm GMT</div>
-      <div><span>Tuition:</span> $250 / month × 2 months (risk‑free first month)</div>
-    </div>
-
-    <h3 style="margin-top:2rem; font-size:1.35rem;">Modules</h3>
-    <ul class="about-me" style="margin-top:0.5rem; list-style: disc inside;">
-      <li>Documents, Presentations &amp; Websites</li>
-      <li>Automated Data Analysis</li>
-      <li>GenAI for Research &amp; Text Analysis</li>
-      <li>Custom GPTs and Chatbots</li>
-      <li>AI Workflows for Task Automation</li>
-      <li>GenAI for Communication &amp; Outreach</li>
-      <li>Capstone Project &amp; Showcase</li>
-    </ul>
-  </section>
-
-  <!-- ───────────── Weekly Submissions ───────────── -->
-  <section id="submissions" class="submissions">
-    <h2>Weekly Submissions</h2>
-    <p>Links to my weekly assignments will appear here as the course progresses.</p>
+  <!-- About the Course -->
+  <section id="about-course">
+    <h2>About the Course</h2>
+    <p><strong>Generative AI for Work &amp; Research Productivity</strong> is an eight‑week, hands‑on programme where you’ll learn to automate data analysis, content creation, and routine tasks using modern AI tools — without writing code. Highlights include:</p>
     <ul>
-      <li>Week 1 — Documents, Presentations &amp; Websites <span><a href="#">Coming soon</a></span></li>
-      <li>Week 2 — Automated Data Analysis <span><a href="#">Coming soon</a></span></li>
-      <li>Week 3 — GenAI for Research &amp; Text Analysis <span><a href="#">Coming soon</a></span></li>
-      <li>Week 4 — Custom GPTs and Chatbots <span><a href="#">Coming soon</a></span></li>
-      <li>Week 5 — AI Workflows for Task Automation <span><a href="#">Coming soon</a></span></li>
-      <li>Week 6 — GenAI for Communication &amp; Outreach <span><a href="#">Coming soon</a></span></li>
-      <li>Week 7 — Capstone Scoping <span><a href="#">Coming soon</a></span></li>
-      <li>Week 8 — Capstone Showcase <span><a href="#">Coming soon</a></span></li>
+      <li>Automating documents, spreadsheets &amp; data workflows</li>
+      <li>AI‑powered literature reviews &amp; knowledge management</li>
+      <li>Building custom chatbots &amp; retrieval‑augmented systems</li>
+      <li>Creating visuals &amp; presentations with generative models</li>
+      <li>A capstone project to showcase your applied skills</li>
+    </ul>
+
+    <!-- Course Modules Grid -->
+    <div class="modules">
+      <div class="module"><h3>Content &amp; Websites</h3><p>LLM fundamentals, no‑code sites, AI presentations.</p></div>
+      <div class="module"><h3>Automated Data Analysis</h3><p>Code Interpreter, Julius, Windsurf, dashboards.</p></div>
+      <div class="module"><h3>Research &amp; Text Analysis</h3><p>Literature search, summarisation, sentiment analysis.</p></div>
+      <div class="module"><h3>Custom GPTs &amp; Chatbots</h3><p>RAG workflows, API integrations, Botpress.</p></div>
+      <div class="module"><h3>AI Task Automation</h3><p>Lindy, Make.com, GSheets and Gmail automations.</p></div>
+      <div class="module"><h3>Communication &amp; Outreach</h3><p>Ideogram visuals, marketing flows, video production.</p></div>
+    </div>
+  </section>
+
+  <!-- Weekly Submissions -->
+  <section id="submissions" class="submissions">
+    <h2>My Weekly Submissions</h2>
+    <p>Links will be added as the course progresses.</p>
+    <ul>
+      <li>Week&nbsp;1 – <span>coming soon</span></li>
+      <li>Week&nbsp;2 – <span>coming soon</span></li>
+      <li>Week&nbsp;3 – <span>coming soon</span></li>
+      <li>Week&nbsp;4 – <span>coming soon</span></li>
+      <li>Week&nbsp;5 – <span>coming soon</span></li>
+      <li>Week&nbsp;6 – <span>coming soon</span></li>
+      <li>Week&nbsp;7 – <span>coming soon</span></li>
+      <li>Week&nbsp;8 – <span>coming soon</span></li>
     </ul>
   </section>
 
-  <!-- ───────────── Footer ───────────── -->
   <footer>
-    <p>&copy; <span id="year"></span> Kene David Nwosu. All rights reserved.</p>
+    &copy; 2025 Kene David Nwosu • Generative AI Portfolio
   </footer>
-
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
 </body>
 </html>
